--- a/admin/templates/plugin.phtml
+++ b/admin/templates/plugin.phtml
@@ -1,3 +1,12 @@
+<?php
+
+if (!defined('SUMEDIA_BASE_VERSION')) {
+    header( 'Status: 403 Forbidden' );
+    header( 'HTTP/1.1 403 Forbidden' );
+    exit();
+}
+
+?>
 <h3><?php echo __('Urlify', 'sumedia-urlify'); ?> <small><?php echo SUMEDIA_URLIFY_VERSION; ?></small></h3>
 <small>sumedia-urlify</small>
 <div class="sumedia-overview-plugin">
