--- a/admin/templates/plugin.phtml
+++ b/admin/templates/plugin.phtml
@@ -16,14 +16,14 @@ if (!defined('SUMEDIA_BASE_VERSION')) {
             <?php
             echo __('Important: Before you can remove this plugin you have to deactivate it.<br />
                         If you don\'t deactivate it you can harm your ADMIN_COOKIE_PATH in wp-config.php or
-                        the Rewrite Rules in .htaccess file.',
+                        the rewrite rules in .htaccess file.',
                 'sumedia-urlify');
             ?>
         </p>
 
         <p>
             <?php
-            echo __('This Plugin will provide a way to disallow Access to /wp-admin/ with the renaming
+            echo __('This Plugin will provide a way to disallow access to /wp-admin/ with the renaming
                 of the backends default url. It can rewrite the wp-login.php location too, so bots will
                 have no chance to find the login script.',
                 'sumedia-urlify');
