removing multiple registries

--- a/admin/templates/config.phtml
+++ b/admin/templates/config.phtml
@@ -6,7 +6,7 @@ if (!defined('SUMEDIA_BASE_VERSION')) {
     exit();
 }
 
-$form = Sumedia_Base_Registry_View::get('Sumedia_Urlify_Admin_Form_Config');
+$form = Sumedia_Base_Registry::get('Sumedia_Urlify_Admin_Form_Config');
 
 ?>
 <div class="wrap suma-wrap">
