rearrange base components threatment. Debug and Fin urlify.

--- a/templates/admin/config.phtml
+++ b/templates/admin/config.phtml
@@ -1,17 +1,17 @@
 <?php
 
-if (!defined('SUMEDIA_BASE_VERSION')) {
+if (!defined('ABSPATH')) {
     header( 'Status: 403 Forbidden' );
     header( 'HTTP/1.1 403 Forbidden' );
     exit();
 }
 
-$form = Sumedia_Base_Registry::get('Sumedia_Urlify_Admin_Form_Config');
+$form = \Sumedia\Urlify\Base\Registry::get('Sumedia\Urlify\Admin\Form\Config');
 
 ?>
 <div class="wrap suma-wrap">
     <div class="suma-content">
-        <form class="suma-form" name="suma-urlfix-config-form" action="<?php echo admin_url('admin.php?page=sumedia&plugin=' . SUMEDIA_URLIFY_PLUGIN_NAME . '&action=setconfig'); ?>" method="post">
+        <form class="suma-form" name="suma-urlfix-config-form" action="<?php echo admin_url('admin.php?page=' . SUMEDIA_URLIFY_PLUGIN_NAME . '&action=SetConfig'); ?>" method="post">
             <input type="hidden" name="_wpnonce" value="<?php echo wp_create_nonce(); ?>" />
             <fieldset>
                 <legend><?php echo esc_html(__('Setup URL Rewrites', SUMEDIA_URLIFY_PLUGIN_NAME)); ?></legend>
@@ -33,9 +33,9 @@ $form = Sumedia_Base_Registry::get('Sumedia_Urlify_Admin_Form_Config');
             <br />
             <div class="suma-form-actions">
                 <input class="button" type="submit" name="submit" value="<?php echo esc_attr(__('Save URL\'s', SUMEDIA_URLIFY_PLUGIN_NAME)); ?>" />
-                <div class="right">
+                <span class="right">
                     <a href="javascript:void(0);" name="reset"><?php echo esc_html(__('Reset to Wordpress Defaults', SUMEDIA_URLIFY_PLUGIN_NAME)); ?></a>
-                </div>
+                </span>
             </div>
         </form>
     </div>
